fix(badge): prevent stretching through the width of block containers

--- a/src/components/badge/badge.scss
+++ b/src/components/badge/badge.scss
@@ -16,7 +16,7 @@
     @include lime-typography.base;
     cursor: default;
     box-sizing: border-box;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
